# active-campaign-cli

./: Cargo.toml
src/: ac_builder.rs  client.rs  client_generator.rs  config.rs  endpoints.rs  lib.rs  main.rs  util.rs
src/models/: contact.rs
