[package]
name = "active-campaign-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.17", features = ["blocking", "json"]}
serde = { version = "1.0.162", features = ["derive"]}
dotenvy = "0.15.7"
once_cell = "1.17.1"
csv = "1.2.1"
serde_json = "1.0.96"
thiserror = "1.0.40"
