[package]
name = "active-campaign"
version = "0.1.2"
edition = "2021"

[lib]
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#configuring-a-target
name = "active_campaign"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"]}
dotenvy = "0.15"
once_cell = "1.17"
csv = "1.2"
serde_json = "1"
thiserror = "1"
paste = "1"
api-client-macro = "0.1.4"
